--- a/src/locales/fr.po
+++ b/src/locales/fr.po
@@ -2777,24 +2777,24 @@ msgstr "Aucune donnée disponible."
 
 #: src/lib/dp/components/comments/CommentSection.svelte
 msgid "Failed to add comment."
-msgstr "Échec de l'ajout du commentaire.\"#: src/lib/dp/components/comments/CommentRow.svelte"
+msgstr "Échec de l'ajout du commentaire.\\"
 
 #: src/lib/dp/components/comments/CommentRow.svelte
 msgid "Error updating comment"
-msgstr "Erreur lors de la mise à jour du commentaire\\"
+msgstr "Erreur lors de la mise à jour du commentaire"
 
 #. placeholder {0}: email
 #: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "If we have your email ({0}) on file, you will receive a reset password request in your inbox."
-msgstr "Si nous avons votre adresse e-mail ({0}) dans nos dossiers, vous recevrez une demande de réinitialisation de mot de passe dans votre boîte de réception.\\"
+msgstr "Si nous avons votre adresse e-mail ({0}) dans nos dossiers, vous recevrez une demande de réinitialisation de mot de passe dans votre boîte de réception."
 
 #: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "Error sending reset password request."
-msgstr "Erreur lors de l'envoi de la demande de réinitialisation de mot de passe.\"#: src/lib/dp/auth/OAuthProviderButton.svelte"
+msgstr "Erreur lors de l'envoi de la demande de réinitialisation de mot de passe.\\"
 
 #: src/lib/dp/auth/OAuthProviderButton.svelte
 msgid "There was an error processing your authentication request via external provider. Please double-check your signup key"
-msgstr "Une erreur s'est produite lors du traitement de votre demande d'authentification via un fournisseur externe. Veuillez vérifier votre clé d'inscription.\\"
+msgstr "Une erreur s'est produite lors du traitement de votre demande d'authentification via un fournisseur externe. Veuillez vérifier votre clé d'inscription."
 
 #: src/lib/dp/components/forms/TeamMembersForm.svelte
 #: src/lib/dp/components/forms/TeamMembersForm.svelte
@@ -2829,40 +2829,40 @@ msgstr "Entraînement\"#. placeholder {0}: model.first_name + \" \" + model.last
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been added as an admin for team \"{1}\""
-msgstr "L'utilisateur \"{0}\" a été ajouté comme administrateur pour l'équipe \"{1}\"\"#: src/lib/dp/components/team/TeamMembersTableContent.svelte"
+msgstr "L'utilisateur \"{0}\" a été ajouté comme administrateur pour l'équipe \"{1}\"\\"
 
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while adding user as admin"
-msgstr "Une erreur s'est produite lors de l'ajout de l'utilisateur en tant qu'administrateur\"#. placeholder {0}: model.first_name + \" \" + model.last_name"
+msgstr "Une erreur s'est produite lors de l'ajout de l'utilisateur en tant qu'administrateur\\"
 
 #. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as admin for team \"{1}\""
-msgstr "L'utilisateur \"{0}\" a été supprimé en tant qu'administrateur pour l'équipe \"{1}\"\"#: src/lib/dp/components/team/TeamMembersTableContent.svelte"
+msgstr "L'utilisateur \"{0}\" a été supprimé en tant qu'administrateur pour l'équipe \"{1}\"\\"
 
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as admin"
-msgstr "Une erreur s'est produite lors de la suppression de l'utilisateur en tant qu'administrateur\"#. placeholder {0}: model.first_name + \" \" + model.last_name"
+msgstr "Une erreur s'est produite lors de la suppression de l'utilisateur en tant qu'administrateur\\"
 
 #. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as member from team \"{1}\""
-msgstr "L'utilisateur \"{0}\" a été supprimé de l'équipe \"{1}\"\"#: src/lib/dp/components/team/TeamMembersTableContent.svelte"
+msgstr "L'utilisateur \"{0}\" a été supprimé de l'équipe \"{1}\"\\"
 
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as team member"
-msgstr "Une erreur s'est produite lors de la suppression du membre de l'équipe\"#. placeholder {0}: modelName"
+msgstr "Une erreur s'est produite lors de la suppression du membre de l'équipe"
 
 #. placeholder {0}: modelName
 #: src/lib/dp/components/utils/DeleteButton.svelte
 msgid "Error deleting {0}."
-msgstr "Erreur lors de la suppression de {0}.\"#: src/lib/dp/components/player/TeamPlayerSection.svelte"
+msgstr "Erreur lors de la suppression de {0}."
 
 #: src/lib/dp/components/player/TeamPlayerSection.svelte
 msgid "Visualization <0>NumberImage</0>"
-msgstr "Visualisation <0>NumberImage</0>\"#: src/routes/(tib)/gamecenter/+page.svelte"
+msgstr "Visualisation <0>NumberImage</0>"
 
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Previous"
@@ -2884,57 +2884,57 @@ msgstr "Tous"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Timeframe"
-msgstr "Période\"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte"
+msgstr "Période"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Sort"
-msgstr "Trier\"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte"
+msgstr "Trier"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Ascending"
-msgstr "Croissant\"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte"
+msgstr "Croissant"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Descending"
-msgstr "Décroissant\"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte"
+msgstr "Décroissant"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Other"
-msgstr "Autre\"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte"
+msgstr "Autre"
 
 #: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
 msgid "<0/> Create new"
-msgstr "<0/> Créer nouveau\"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte"
+msgstr "<0/> Créer nouveau"
 
 #: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
 msgid "Create new Community Service Entry"
-msgstr "Créer une nouvelle entrée de service communautaire\"#: src/lib/dp/components/navigation/NavigationSheet.svelte"
+msgstr "Créer une nouvelle entrée de service communautaire"
 
 #: src/lib/dp/components/navigation/NavigationSheet.svelte
 msgid "Diamond Planner Logo"
-msgstr "Logo Diamond Planner\"#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte"
+msgstr "Logo Diamond Planner"
 
 #: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
 #: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Community Service Entry"
-msgstr "Entrée de service communautaire\"#: src/lib/dp/components/forms/ServiceEntryForm.svelte"
+msgstr "Entrée de service communautaire"
 
 #: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Date <0/>"
-msgstr "Date <0/>\"#: src/lib/dp/components/forms/ServiceEntryForm.svelte"
+msgstr "Date <0/>"
 
 #: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Duration"
-msgstr "Durée\"#: src/lib/dp/components/forms/ServiceEntryForm.svelte"
+msgstr "Durée"
 
 #: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Minutes <0/>"
-msgstr "Minutes <0/>\"#: src/lib/dp/components/forms/ServiceEntryForm.svelte"
+msgstr "Minutes <0/>"
 
 #: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Board Member <0/>"
-msgstr "Membre du conseil <0/>\"#: src/lib/dp/components/forms/ServiceEntryForm.svelte"
+msgstr "Membre du conseil <0/>"
 
 #: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Member <0/>"
@@ -2942,22 +2942,22 @@ msgstr "Membre <0/>\"#: src/lib/dp/auth/LoginForm.svelte"
 
 #: src/lib/dp/auth/LoginForm.svelte
 msgid "Sign in to Diamond Planner"
-msgstr "Se connecter à Diamond Planner\"#: src/lib/dp/components/meta/SidebarNavigation.svelte"
+msgstr "Se connecter à Diamond Planner"
 
 #: src/lib/dp/components/meta/SidebarNavigation.svelte
 #: src/lib/dp/components/meta/SidebarNavigation.svelte
 #: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
 msgid "Community Service"
-msgstr "Service communautaire\"#. placeholder {0}: entry.title"
+msgstr "Service communautaire"
 
 #. placeholder {0}: entry.title
 #: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
 msgid "Edit Community Service Entry \"{0}\""
-msgstr "Modifier l'entrée de service communautaire \"{0}\"\\"
+msgstr "Modifier l'entrée de service communautaire \"{0}\""
 
 #: src/lib/dp/components/communityservice/TargetVisualizer.svelte
 msgid "Target:"
-msgstr "Cible :\"#: src/lib/dp/components/user/PlayerDataProfileSection.svelte"
+msgstr "Cible :\\"
 
 #: src/lib/dp/components/user/PlayerDataProfileSection.svelte
 msgid ""
